# can-rosetta

./: .gitignore  .release-please-manifest.json  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SAFETY.md  SECURITY.md  release-please-config.json
.github/: pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yaml  feature-request.yaml
.github/scripts/: validate_session.py
.github/workflows/: android-release.yml  build-image.yml  ci.yml  release-please.yml
companion/android/: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
companion/android/app/: build.gradle.kts
companion/ios/: CHANGELOG.md  CanRosettaCompanion-Simulator.entitlements  README.md  Signing.xcconfig  project.yml
companion/ios/CanRosettaCompanion/: CanRosettaCompanion.entitlements  Info.plist
companion/ios/CanRosettaCompanion/App/: CanRosettaCompanionApp.swift  CarPlaySceneDelegate.swift
companion/ios/CanRosettaCompanion/IO/: JSONLWriter.swift  SessionManifest.swift
companion/ios/CanRosettaCompanion/Recording/: PhotoCapture.swift  RecordingController.swift  VideoRecorder.swift
companion/ios/CanRosettaCompanion/Remote/: EdgeConnection.swift  EdgeControlClient.swift  WifiJoiner.swift
companion/ios/CanRosettaWidgets/: CanRosettaWidgetsBundle.swift  Info.plist  RecordingLiveActivity.swift  RecordingStatusWidget.swift
datasets/sample-session/: ground_truth.json  manifest.json
datasets/sample-session/can/: discovery.json  frames.jsonl
datasets/sample-session/edge/: location.jsonl  motion.jsonl
datasets/sample-session/labels/: annotations.json  gear.jsonl  telltales.jsonl
datasets/sample-session/phone/: location.jsonl  motion.jsonl
deploy/pegasus/: README.md  deployment.yaml  fleet.yaml  httproute.yaml  kustomization.yaml  namespace.yaml  oidc-secret.example.yaml  secretproviderclass.yaml  securitypolicy.yaml  service.yaml
docs/: architecture.md  car-projection.md  connection.md  control-protocol.md  data-format.md  governance.md  methodology.md  provisioning.md  roadmap.md  validation.md
edge/autopi/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  reverse_engineer.py
edge/autopi/scripts/: bootstrap.sh
edge/autopi/src/canrosetta_edge/: __init__.py  active.py  audio.py  canbus.py  cli.py  config.py  control.py  discovery.py  engine.py  logging_.py  obd.py  pairing.py  power.py  recon.py  sensors.py  session.py  transport.py  uds.py  updater.py
edge/autopi/tests/: conftest.py  test_audio.py  test_control.py  test_discovery.py  test_engine.py  test_logging.py  test_manifest.py  test_pairing.py  test_recon.py  test_safety.py  test_sensors_power.py  test_updater.py
schemas/: can_frame.record.schema.json  car_hw.record.schema.json  discovery.schema.json  label_dashboard.record.schema.json  label_gear.record.schema.json  label_telltale.record.schema.json  location.record.schema.json  manifest.schema.json  motion.record.schema.json  pairing_payload.schema.json  photo_index.record.schema.json
server/: .dockerignore  Dockerfile  README.md  pyproject.toml
server/src/canrosetta/: __init__.py  align.py  api.py  charging.py  cli.py  clusters.py  dbc.py  ev.py  extract.py  identify.py  ingest.py  kb.py  merge.py  mux.py  references.py  roles.py  session.py  signals.py  synth.py  taxonomy.py
server/src/canrosetta/model/: __init__.py  fingerprint.py  pretrain.py  tokenizer.py  train.py
server/src/canrosetta/perception/: __init__.py  extractors.py  rois.py  run.py  video.py
server/tests/: test_api.py  test_charging.py  test_clusters.py  test_e2e.py  test_ev.py  test_extract.py  test_ingest.py  test_kb.py  test_merge.py  test_model.py  test_mux.py  test_perception.py  test_roles.py  test_schemas.py  test_signals.py  test_techniques.py
server/webui/: app.js  index.html  styles.css  tokens.css
server/webui/fonts/: README.md
(+62 files in other folders)
