[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canrosetta"
version = "0.1.0"
description = "Server-side signal identification and foundation model for CAN-Rosetta"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "inomotech-foss" }]
keywords = ["can", "obd", "uds", "reverse-engineering", "automotive", "dbc"]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
parquet = ["pyarrow>=12"]
model = ["torch>=2.1"]
perception = ["opencv-python-headless>=4.8", "pytesseract>=0.3.10", "pillow>=10"]
api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-multipart>=0.0.9",
  "pyarrow>=12",
]
dev = [
  "pytest>=7",
  "jsonschema>=4",
  "pyarrow>=12",
  "ruff>=0.4",
  # API/UI surface — needed so tests/test_api.py runs in CI. Starlette's
  # TestClient requires httpx; uvicorn lets the dashboard be served locally.
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
]

[project.scripts]
canrosetta = "canrosetta.cli:main"
canrosetta-server = "canrosetta.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/canrosetta"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses callables (File/Query/Depends) as argument defaults by design.
extend-immutable-calls = [
  "fastapi.Body",
  "fastapi.File",
  "fastapi.Query",
  "fastapi.Depends",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
